Fix header on small screen

--- a/css/styles.css
+++ b/css/styles.css
@@ -120,7 +120,7 @@ html {
 
 .navbar .nav-links.is-opened {
     margin-left: 0;
-    margin-top: 15px;
+    margin-top: 50px;
 }
 
 .navbar .nav-links ul li a {
@@ -202,6 +202,14 @@ html {
 
 #theme-button {
     display: none;
+}
+
+.main.is-opened {
+    margin-top: 120px;
+}
+
+.main {
+    transition: all ease-in-out .2s;
 }
 
 /* MAIN CONTENT */
